// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminPage should match a snapshot when has data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Admin
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Your User Config
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            disabled="false"
          >
            Download CSV
            <mock-styled.div />
          </mock-styled.button>
          <div
            class="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.h2
              classname=""
            >
              Organisations
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css."
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  border-radius: 0.25rem;
"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="mock-css.
  width: 100%;
"
                  value=""
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                  >
                    Office Groups Testing
                  </option>
                  <option
                    value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                  >
                    XTM Estates Ltd
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            Users List 
            - XTM Estates Ltd
          </mock-styled.h1>
          <form>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Email
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Name
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  MFA Enabled
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-true"
                  >
                    <mock-styled.span>
                      Enabled
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-false"
                  >
                    <mock-styled.span>
                      Not Configured
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  User Active
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="usr-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-true"
                  >
                    <mock-styled.span>
                      Active
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-false"
                  >
                    <mock-styled.span>
                      Inactive
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </form>
          <mock-styled.p
            classname=""
          >
            Total Users: 
            1
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  margin-bottom: 2.5rem;
"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="4"
          >
            <mock-styled.div>
              <mock-styled.div>
                Name
              </mock-styled.div>
              <mock-styled.div>
                Email
              </mock-styled.div>
              <mock-styled.div>
                Job Title
              </mock-styled.div>
              <mock-styled.div>
                Active
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    Will McVay
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Email"
                  >
                    test@icloud.com
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Job Title"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Active"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css.
  margin-bottom: 1.25rem;
"
                  >
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Fetch Current Authenticators
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                value="1"
              />
               of 
              1
            </mock-styled.div>
            <mock-styled.button
              data-testid="back-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
            <mock-styled.button
              data-testid="forward-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Admin
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Your User Config
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          disabled="false"
        >
          Download CSV
          <mock-styled.div />
        </mock-styled.button>
        <div
          class="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.h2
            classname=""
          >
            Organisations
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  border-radius: 0.25rem;
"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="mock-css.
  width: 100%;
"
                value=""
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                >
                  Office Groups Testing
                </option>
                <option
                  value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                >
                  XTM Estates Ltd
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          Users List 
          - XTM Estates Ltd
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Email
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                MFA Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-true"
                >
                  <mock-styled.span>
                    Enabled
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-false"
                >
                  <mock-styled.span>
                    Not Configured
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                User Active
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="usr-active-all"
                  name="active"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-true"
                  name="active"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-true"
                >
                  <mock-styled.span>
                    Active
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-false"
                  name="active"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-false"
                >
                  <mock-styled.span>
                    Inactive
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.p
          classname=""
        >
          Total Users: 
          1
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  margin-bottom: 2.5rem;
"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="4"
        >
          <mock-styled.div>
            <mock-styled.div>
              Name
            </mock-styled.div>
            <mock-styled.div>
              Email
            </mock-styled.div>
            <mock-styled.div>
              Job Title
            </mock-styled.div>
            <mock-styled.div>
              Active
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
                style="font-size: 1.2rem;"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  Will McVay
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Email"
                >
                  test@icloud.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Job Title"
                />
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Active"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 1.25rem;
"
                >
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Fetch Current Authenticators
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Admin
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Your User Config
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            disabled="false"
          >
            Download CSV
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            Users List 
          </mock-styled.h1>
          <form>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Email
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Name
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  MFA Enabled
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-true"
                  >
                    <mock-styled.span>
                      Enabled
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-false"
                  >
                    <mock-styled.span>
                      Not Configured
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  User Active
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="usr-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-true"
                  >
                    <mock-styled.span>
                      Active
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-false"
                  >
                    <mock-styled.span>
                      Inactive
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </form>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Admin
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Your User Config
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          disabled="false"
        >
          Download CSV
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          Users List 
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Email
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                MFA Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-true"
                >
                  <mock-styled.span>
                    Enabled
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-false"
                >
                  <mock-styled.span>
                    Not Configured
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                User Active
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="usr-active-all"
                  name="active"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-true"
                  name="active"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-true"
                >
                  <mock-styled.span>
                    Active
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-false"
                  name="active"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-false"
                >
                  <mock-styled.span>
                    Inactive
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when no users found 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Admin
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Your User Config
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            disabled="false"
          >
            Download CSV
            <mock-styled.div />
          </mock-styled.button>
          <div
            class="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.h2
              classname=""
            >
              Organisations
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css."
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  border-radius: 0.25rem;
"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="mock-css.
  width: 100%;
"
                  value=""
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                  >
                    Office Groups Testing
                  </option>
                  <option
                    value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                  >
                    XTM Estates Ltd
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            Users List 
          </mock-styled.h1>
          <form>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Email
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Name
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  MFA Enabled
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-true"
                  >
                    <mock-styled.span>
                      Enabled
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-false"
                  >
                    <mock-styled.span>
                      Not Configured
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  User Active
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="usr-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-true"
                  >
                    <mock-styled.span>
                      Active
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-false"
                  >
                    <mock-styled.span>
                      Inactive
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </form>
          <mock-styled.div
            classname="mock-css. mock-css. mock-css. mock-css."
          >
            <div
              class="mock-css.
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </div>
            <div
              class="mock-css.
  padding: 0.75rem 1.25rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
            >
              Please select an organisation from the left hand side before proceeding.
            </div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Admin
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Your User Config
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          disabled="false"
        >
          Download CSV
          <mock-styled.div />
        </mock-styled.button>
        <div
          class="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.h2
            classname=""
          >
            Organisations
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  border-radius: 0.25rem;
"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="mock-css.
  width: 100%;
"
                value=""
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                >
                  Office Groups Testing
                </option>
                <option
                  value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                >
                  XTM Estates Ltd
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          Users List 
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Email
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                MFA Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-true"
                >
                  <mock-styled.span>
                    Enabled
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-false"
                >
                  <mock-styled.span>
                    Not Configured
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                User Active
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="usr-active-all"
                  name="active"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-true"
                  name="active"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-true"
                >
                  <mock-styled.span>
                    Active
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-false"
                  name="active"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-false"
                >
                  <mock-styled.span>
                    Inactive
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 0.75rem 1.25rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
          >
            Please select an organisation from the left hand side before proceeding.
          </div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when not multi org 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Admin
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Your User Config
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            disabled="false"
          >
            Download CSV
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            Users List 
            - XTM Estates Ltd
          </mock-styled.h1>
          <form>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Email
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Name
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  MFA Enabled
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-true"
                  >
                    <mock-styled.span>
                      Enabled
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="mfa-enabled-false"
                  >
                    <mock-styled.span>
                      Not Configured
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  User Active
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="usr-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-true"
                  >
                    <mock-styled.span>
                      Active
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="usr-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="usr-active-false"
                  >
                    <mock-styled.span>
                      Inactive
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </form>
          <mock-styled.p
            classname=""
          >
            Total Users: 
            1
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  margin-bottom: 2.5rem;
"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="4"
          >
            <mock-styled.div>
              <mock-styled.div>
                Name
              </mock-styled.div>
              <mock-styled.div>
                Email
              </mock-styled.div>
              <mock-styled.div>
                Job Title
              </mock-styled.div>
              <mock-styled.div>
                Active
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    Will McVay
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Email"
                  >
                    test@icloud.com
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Job Title"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Active"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css.
  margin-bottom: 1.25rem;
"
                  >
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Fetch Current Authenticators
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                value="1"
              />
               of 
              1
            </mock-styled.div>
            <mock-styled.button
              data-testid="back-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
            <mock-styled.button
              data-testid="forward-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Admin
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Your User Config
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          disabled="false"
        >
          Download CSV
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          Users List 
          - XTM Estates Ltd
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Email
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                MFA Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-true"
                >
                  <mock-styled.span>
                    Enabled
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="mfa-enabled-false"
                >
                  <mock-styled.span>
                    Not Configured
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                User Active
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="usr-active-all"
                  name="active"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-true"
                  name="active"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-true"
                >
                  <mock-styled.span>
                    Active
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="usr-active-false"
                  name="active"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="usr-active-false"
                >
                  <mock-styled.span>
                    Inactive
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.p
          classname=""
        >
          Total Users: 
          1
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  margin-bottom: 2.5rem;
"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="4"
        >
          <mock-styled.div>
            <mock-styled.div>
              Name
            </mock-styled.div>
            <mock-styled.div>
              Email
            </mock-styled.div>
            <mock-styled.div>
              Job Title
            </mock-styled.div>
            <mock-styled.div>
              Active
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
                style="font-size: 1.2rem;"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  Will McVay
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Email"
                >
                  test@icloud.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Job Title"
                />
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Active"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 1.25rem;
"
                >
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Fetch Current Authenticators
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
